...
        </Text>
      }
      assist={
        seedVault ? (
          <SecondaryButton
            onPress={() => router.push('/(auth)/seed-vault')}
            testID="select-seed-vault-button"
          >
            {t('settings.account_add.import_seed_vault')}
          </SecondaryButton>
        ) : undefined
      }
      secondary={
...
